# rust-calculator

./: Cargo.toml  README.md
src/: enums.rs  main.rs
src/math/: add.rs  div.rs  mod.rs  mul.rs  sub.rs
src/validation/: empty_or_nam.rs  mod.rs  zero_division.rs
